# gitsnap

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: build.yml  release.yml
src/: files.rs  main.rs  repository.rs
