[package]
name = "gitsnap"
description = "A tool to take snapshots of GitHub repositories in a single text file."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.34"
colored = "2"
futures = "0.3"
infer = "0.16.0"
lazy_static = "1"
regex = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
