[package]
name = "gitsnap"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flaviodelgrosso/GitSnap"
authors = ["Flavio Del Grosso"]
description = "A tool to take snapshots of GitHub repositories in a single text file."

[dependencies]
clap = "2.34"
colored = "2"
futures = "0.3"
infer = "0.16.0"
lazy_static = "1"
regex = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
