[package]
name = "gitsnap"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flaviodelgrosso/GitSnap"
authors = ["Flavio Del Grosso"]
description = "A tool to take snapshots of GitHub repositories in a single text file."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.18.3"
tempfile = "3.19.1"
walkdir = "2.5.0"
regex = "1.11.1"
anyhow = "1.0.98"
url = "2.5.4"
log = "0.4.27"
env_logger = "0.10.2"
humansize = "2.1.3"
lazy_static = "1.5.0"
rayon = "1.10.0"
crossbeam-channel = "0.5.15"
